graphql-parser/tests/snapshots/tests__parse_schema__query_kitchen_sink__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 56:1\nUnexpected `{[Punctuator]`\nExpected `end of input`\n",
    ),
)
