graphql-parser/tests/snapshots/tests__parse_schema__query_kitchen_sink__win.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 10:1\nUnexpected `query[Name]`\nExpected `schema`, `extend`, `scalar`, `type`, `interface`, `union`, `enum`, `input` or `directive`\n",
    ),
)
